// Defenition for Video Detection porototype
syntax = "proto3";

message Response {
  // if reponse > 0 suceess else failure- check error_details for failure message
  int32 response = 1;
  int32 datalen =2;
}
message MatInput{
    bytes data =1;
    int32 height =2;
    int32 width =3;
    int32 datalen =4;

}
service ByteTransferSvc {
   rpc transferMat (MatInput) returns (Response){}
}

